[package]
name = "emails"              
version = "1.0.0"            
authors = ["Chris Neuwirth <cneuwirth@networkgsgroup.com>"]
edition = "2021"
description = "A web scraper to extract email addresses from websites."
license = "MIT"
repository = "https://github.com/cybrly/emails"
homepage = "https://github.com/cybrly/emails"
documentation = "https://github.com/cybrly/emails"
readme = "README.md"
keywords = ["email", "scraper", "web", "crawler"]
categories = ["command-line-utilities", "web-programming::http-client", "parsing::text-processing"]


[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["blocking", "cookies", "gzip"] }
scraper = "0.15.0"
colored = "2.0.0"
url = "2.3.1"
